# claude-multi-starter

./: .gitignore  HOW_TO_SEND_MESSAGES.md  README.md  README_CN.md  README_cn.md  SETUP.md  SETUP_WEZTERM_MANUAL.ps1  START_MULTI_TAB.py  START_WEZTERM_AUTO.bat  START_WEZTERM_AUTO.ps1  START_WEZTERM_SIMPLE.py  ccb  cms.config  fix-mapping.bat  fix-mapping.py  install.ps1  install.sh  pyproject.toml  run.py  send  send-tab.py  test-wezterm-cli.py  删除清单-最小核心版本.md  自动触发使用指南.md  项目功能清单.md
.cms_config/: tab_mapping.json  temp_send.ps1
.github/workflows/: cross-platform-test.yml
lib/: askd_client.py  ccb_start_config.py  claude_session_resolver.py  cleanup-daemons.ps1  cmw_start_config.py  compat.py  completion_hook.py  detect_wezterm.py  laskd_daemon.py  laskd_protocol.py  laskd_session.py  multi_daemon_launcher.py  multi_instance_layout.py  providers.py  terminal.py
mcp/: MCP_GUIDE.md
mcp/send-tool/: README.md  requirements.txt  send.py  server.json  server.py
scripts/: auto-continue.ps1  init-tab-mapping.ps1  start-automation.ps1
skills/send/: SKILL.md  SKILL.md.powershell
task-comms/: automation-state.md  from-c1-design.md
